[package]
name = "micropelt"
version = "1.1.5"
edition = "2021"
description = "Micropelt device communication definitions"
readme = "readme.md"
homepage = "http://micropelt.com"
repository = "https://github.com/Micropelt-EH4/micropelt"
license = "Apache-2.0"
keywords = ["ecological", "smart", "heating", "LoRa", "LoRaWAN"]

[dependencies]
micropelt-derive = "0.1"

[dev-dependencies]
base64 = "0.21"
